# CFB

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: C++ Test.yml
include/: CFB.hh
tests/: CFB_test.cc
